# vite-task

./: Cargo.toml
crates/fspy/: Cargo.toml
crates/fspy/src/: arena.rs  lib.rs
crates/fspy/src/unix/: mod.rs
crates/fspy_preload_unix/src/: lib.rs
crates/fspy_preload_unix/src/interceptions/: linux_syscall.rs  open.rs
crates/fspy_preload_unix/src/interceptions/spawn/exec/: mod.rs  with_argv.rs
crates/fspy_seccomp_unotify/: Cargo.toml
crates/fspy_seccomp_unotify/src/: lib.rs  target.rs
crates/fspy_seccomp_unotify/src/supervisor/handler/: arg.rs
crates/fspy_seccomp_unotify/tests/: arg_types.rs
crates/fspy_shared/: Cargo.toml
crates/fspy_shared/src/ipc/: mod.rs  native_path.rs
crates/fspy_shared_unix/: Cargo.toml
crates/fspy_shared_unix/src/: payload.rs
crates/fspy_shared_unix/src/spawn/: mod.rs
crates/fspy_shared_unix/src/spawn/linux/: mod.rs
crates/native_str/: Cargo.toml
crates/native_str/src/: lib.rs
crates/preload_test_lib/src/: lib.rs
crates/pty_terminal/tests/: terminal.rs
crates/vite_path/src/absolute/: mod.rs
crates/vite_task/src/session/cache/: mod.rs
