[package]
name = "fspy_shared"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
wincode = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }
bumpalo = { workspace = true }
bstr = { workspace = true }
bytemuck = { workspace = true, features = ["must_cast", "derive"] }
native_str = { workspace = true }
#shared_memory = { workspace = true, features = ["logging"] }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }


[target.'cfg(not(target_os = "android"))'.dependencies]
shared_memory = { workspace = true, features = ["logging"] }

[target.'cfg(target_os = "android")'.dependencies]
memmap2 = "0.9.10"
memfd = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
bytemuck = { workspace = true }
os_str_bytes = { workspace = true }
winapi = { workspace = true, features = ["std"] }

[dev-dependencies]
assert2 = { workspace = true }
ctor = { workspace = true }
rustc-hash = { workspace = true }
shared_memory = { workspace = true, features = ["logging"] }
subprocess_test = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false

[package.metadata.cargo-shear]
ignored = ["ctor"]
