[package]
name = "native_str"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
bumpalo = { workspace = true }
bytemuck = { workspace = true, features = ["must_cast", "derive"] }
wincode = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
